Fixed some text on page

--- a/public/contact/_contact.html
+++ b/public/contact/_contact.html
@@ -10,7 +10,7 @@
         <h1 class='logo three columns'>
           <a href='/'>SONG Products</a>
         </h1>
-        <ul class='columns nav offset-by-six three'>
+        <ul class='columns four nav offset-by-five'>
           <li>
             <a href='/'>Home</a>
           </li>
