--- a/public/about/index.html
+++ b/public/about/index.html
@@ -10,7 +10,7 @@
         <h1 class='logo three columns'>
           <a href='/'>SONG Products</a>
         </h1>
-        <ul class='columns nav offset-by-six three'>
+        <ul class='columns four nav offset-by-five'>
           <li>
             <a href='/'>Home</a>
           </li>
@@ -32,11 +32,6 @@
           <p>
             <a href='http://www.essentiallysmooth.com/'>Essentially Smooth</a>
             is a skin care company, offering top quality sugar scrubs (skin exfoliants) for use in the shower or bath. Essentially Smooth's products are all-natural and are raved about by their customers as being essential to their skin care routine.
-          </p>
-          <h4><a href='http://www.26twelvestudio.com/'>26Twelve Studio</a></h4>
-          <p>
-            <a href='http://www.26twelvestudio.com/'>26Twelve Studio</a>
-            performs web design, SEO and internet marketing services for clients. 26Twelve specializes in CSS designing and has extensive experience with blogging platforms such as Wordpress.
           </p>
           <h4><a href='http://www.entre-propel.com/'>Entre-Propel.com</a></h4>
           <p>
